# WasmEdge

./: .gitignore
include/driver/: unitool.h  validate.h
lib/driver/: CMakeLists.txt  uniTool.cpp  validate.cpp
test/: CMakeLists.txt
test/driver/: CMakeLists.txt  validate.cpp
